# Composition-and-Aggregation

./: README.md  main.py  pyproject.toml
models/: __init__.py  delivery.py  order.py  payment.py
repositories/: customer_repo.py  order_repo.py  product_repo.py  warehouse_repo.py
src/: enum.py  schemas.py
src/models/: __init__.py  cart.py  customer.py  discount.py  order.py  payment.py  product.py
src/repositories/: __init__.py  customer_repo.py  order_repo.py  product_repo.py  warehouse_repo.py
src/servises/: __init__.py  app_service.py  cart_service.py  customer_service.py  order_service.py  product_service.py
src/utils/: __init__.py  customers.json  data_loader.py  products.json
tests/: conftest.py  test_integration.py  test_models_cart.py  test_models_customer.py  test_models_delivery.py  test_models_discount.py  test_models_order.py  test_models_payment.py  test_models_product.py  test_repositories_customer.py  test_repositories_order.py  test_repositories_product.py  test_schemas.py  test_services_cart.py  test_services_product.py
